fixed logo clippingand logo size and placement across views

--- a/sass/layouts/_layouts.sass
+++ b/sass/layouts/_layouts.sass
@@ -35,7 +35,7 @@
   @include omega()
 
 .clearfix
-  @include clearfix;
+  @include clearfix
 
 .pull-left
   float: left
