--- a/sass/modules/_admin-ui.sass
+++ b/sass/modules/_admin-ui.sass
@@ -2,7 +2,7 @@
 
 .admin-login, .admin-dashboard
   position: relative
-  left: 50%
+  margin-left: 50%
   -webkit-transform: translate(-50%)
   -moz-transform: translate(-50%)
   -ms-transform: translate(-50%)
@@ -18,7 +18,7 @@
 .logo-svg
   display: block
   margin: auto
-  width: 40%
+  width: 60%
 
 .admin-legend
   display: none
@@ -32,11 +32,17 @@
 
 
 //---------------admin dashboard----------------
+.admin-dashboard
+  max-width: 30em
+
 .admin-panel
   @include span-columns(8)
   @include shift(2)
   margin-top: 10%
   padding:0
+
+.dashboard-logo
+  width: 40%
 
 .dashboard-menu
   list-style-type: none
@@ -54,7 +60,7 @@
   color: white
 
 .dashboard-btn
-  @include span-columns(6)
+  @include span-columns(8)
   @include omega(4n)
   height: 4.5em
   width: 100%
